--- a/frpc.ini
+++ b/frpc.ini
@@ -2,6 +2,8 @@
 server_addr = 12.34.56.78
 server_port = 6318
 privilege_token = HUknows1
+; some times it's token, misguiding field
+token = HUknows1
 
 [rdp]
 type = tcp
